--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
-    <title>Login <Form></Form></title>
+  <head>
+    
+    <title>Login Form</title>
+    <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500;600&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="styles.css"/>
+  
   </head>
   <body>
    <div id="root"></div>
