--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -4,8 +4,21 @@
     
     <title>Login Form</title>
     <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500;600&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="styles.css"/>
-  
+ <!-- Bootstrap core css -->
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+ <link href="./styles.css" rel="stylesheet">
+ <link rel="favicon" href="favicon.ico">
+
+   <!-- Bootstarp Scripts -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+     integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+     crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+     integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+     crossorigin="anonymous"></script>
+
+
   </head>
   <body>
    <div id="root"></div>
